# mc_particle

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dependence  functions.cmake
Color Block/: 指令.txt
cmake_dependence/: CMakeLists.txt  Makefile  dependency_analyse.cpp
docs/: CMAKEfunction详解.md  CMAKE例程详解.md  basic.md  basic_particle使用指南.md  cmake_frame_usage.md  git_graph解释.md  linear_particle使用指南.md  mcfunction使用指南.md  svg_frame.hpp说明.md
docs/missions/: bezier-curve-length.md
docs/missions/svg_parse/: svg基本结构.md  svg文件格式整理.md  svg解析器.md  svg转mcparticle.md
global_test/: CMakeLists.txt  main.cpp
include/: basic_particle.hpp  cmdline.hpp  config_particle_lib.hpp  cube_bezier_particle.hpp  datapack_func_options.hpp  dynamic_particle.hpp  gnuplot-iostream.h  linear_particle.hpp  mc_particle.hpp  options_format_particle.hpp
include/OpenGL_GUI/: application.hpp  widget.hpp
include/cube_bezier_particle/: gauss_legender_integral_impl.hpp  solid_color_static_sequential_continuity_points_impl.hpp
include/glad/: glad.h
include/linear_particle/: gradual_color_expand_spiral_instantaneous_file.hpp  gradual_color_expand_spiral_sequential_file.hpp  gradual_color_static_instantaneous_impl.hpp  gradual_color_static_sequential_impl.hpp  gradual_color_static_spiral_sequential.hpp
include/svg_analyse/: svg_frame.hpp  svg_parse.hpp
lldb_script/: print_matrix.py
resource/public/datapacks/my_datapack/: pack.mcmeta
resource/public/datapacks/my_datapack/data/example/functions/: test_func.mcfunction
source/main/OpenGL_GUI/: CMakeLists.txt  application.cpp  proj
source/main/OpenGL_GUI/shaders/: default_frag.frag  default_vert.vert
source/main/base_particles_lib/: CMakeLists.txt  basic_particle.cpp  cube_bezier_particle.cpp  datapack_func_options.cpp  dynamic_particle.cpp  linear_particle.cpp  options_format_particles.cpp  proj
source/main/base_particles_lib/svg_analyse/: CMakeLists.txt  svg_frame.cpp
source/main/examples/: .gitignore
source/main/examples/particles_lib/: CMakeLists.txt  main.cpp  main2.cpp  proj
source/main/examples/pybind_example/: CMakeLists.txt  proj  pybind_main.cpp
source/main/examples/pybind_example/pymodule/: cppplot.py
source/main/glad_lib/: CMakeLists.txt  glad.c  proj
